# libnifalcon

./: .gitmodules  AUTHORS.txt  BuildSysCMakeLib.cmake  CMakeLists.txt  COMPILE.txt  ChangeLog.txt  INSTALL.txt  LICENSE  README.asciidoc  README.txt  documentation.html  downloads.textile  index.markdown  index.textile  libnifalcon.pc.cmake  links.textile
boneyard/c_driver/: CMakeLists.txt  nifalcon.h  nifalcon_ftd2xx.c  nifalcon_kinematics.c  nifalcon_libftdi.c  nifalcon_test_fw.c  nifalcon_test_fw.h
examples/: CMakeLists.txt
examples/FalconMechanics/: CMakeLists.txt  main.cpp
examples/FalconMechanics/controller/: Controller.cpp  Controller.h
examples/FalconMechanics/data/: base.stl  cow.osg  effector.stl  joint.stl  parallel.stl
examples/FalconMechanics/view/: Toolbox.cpp  Toolbox.h  Viewer.cpp  Viewer.h
examples/FalconMechanics/view/falcon/: Arm.cpp  Arm.h  Base.cpp  Base.h  Effector.cpp  Effector.h  Element.cpp  Element.h  Falcon.cpp  Falcon.h  Force.cpp  Force.h  Joint.cpp  Joint.h  Parallel.cpp  Parallel.h
examples/ally_mechanics/: main.cpp
examples/barrow_mechanics/: CMakeLists.txt  main.cpp
examples/falcon_dk_math/: CMakeLists.txt  falcon_dk_math.c
examples/falcon_hdl/: CMakeLists.txt  haptics.cpp  haptics.h  hdl.cpp  hdl.h  hdlConstants.h  hdlErrors.h  hdlExports.h  hdlu.h  hdluExports.h  main_opengl.cpp
examples/falcon_kinematics_test/: CMakeLists.txt  falcon_kinematics_test.c
examples/falcon_led/: CMakeLists.txt  falcon_led.cpp
examples/falcon_mouse/: CMakeLists.txt  falcon_mouse.cpp  falcon_mouse.h  falcon_mouse_linux.cpp  falcon_mouse_osx.cpp  falcon_mouse_win.cpp  falcon_mouse_x11.cpp
examples/falcon_test_cli/: CMakeLists.txt  FalconColorTest.cpp  FalconColorTest.h  FalconCubeTest.cpp  FalconCubeTest.h  FalconLoopTimeTest.cpp  FalconLoopTimeTest.h  FalconSphereTest.cpp  FalconSphereTest.h  FalconTestBase.cpp  FalconTestBase.h  FalconWallTest.cpp  FalconWallTest.h  falcon_test_cli.cpp
examples/falcon_test_qt/: CMakeLists.txt  FalconTestQt.pro  falcontestqt.cpp  falcontestqt.h  falcontestqt.ui  main.cpp
examples/findfalcons/: CMakeLists.txt  findfalcons.c  findfalcons.cpp  findfalcons_libusb1.c
examples/findfalcons_cpp/: CMakeLists.txt  findfalcons.cpp
examples/findfalcons_multi/: findfalcons_multi.cpp
include/: CMakeLists.txt
include/falcon/comm/: FalconCommFTD2XX.h  FalconCommLibFTDI.h  FalconCommLibUSB.h
include/falcon/core/: FalconComm.h  FalconCore.h  FalconDevice.h  FalconFirmware.h  FalconGeometry.h  FalconGrip.h  FalconKinematic.h  FalconLogger.h
include/falcon/firmware/: FalconFirmwareNovintSDK.h
include/falcon/gmtl/: AABox.h  AABoxOps.h  AxisAngle.h  AxisAngleOps.h  Comparitors.h  Containment.h  Coord.h  CoordOps.h  EulerAngle.h  EulerAngleOps.h  Frustum.h  FrustumOps.h  Generate.h  Helpers.h  Intersection.h  LineSeg.h  LineSegOps.h  Math.h  Matrix.h  MatrixOps.h  OOBox.h  Output.h  Plane.h  PlaneOps.h  Point.h  Quat.h  QuatOps.h  Ray.h  RayOps.h  Sphere.h  SphereOps.h  Tri.h  TriOps.h  Vec.h  VecBase.h  VecExprMeta.h  VecOps.h  VecOpsMeta.h  Version.h  Xforms.h  (+2 more)
include/falcon/gmtl/Fit/: GaussPointsFit.h
include/falcon/gmtl/Misc/: MatrixConvert.h
include/falcon/gmtl/Numerics/: Eigen.h
include/falcon/gmtl/Util/: Meta.h  StaticAssert.h
include/falcon/grip/: FalconGripFourButton.h
include/falcon/kinematic/: FalconKinematicStamper.h  FalconKinematicZsomborMurray.h
include/falcon/kinematic/stamper/: AngularMatrix.h  AngularMatrixLookup.h  DirectKinematic.h  InverseKinematic.h  JacobianMatrix.h  PositionMatrix.h  StamperUtils.h
include/falcon/util/: FalconCLIBase.h  FalconDeviceBoostThread.h  FalconDeviceDefault.h  FalconDeviceThread.h  FalconFirmwareBinaryNvent.h  FalconFirmwareBinaryTest.h
include/falcon_comm_impl/comm/: FalconCommFTD2XX.h  FalconCommLibUSB.h
include/gmtl/: AABox.h  AxisAngleOps.h  Comparitors.h  Config.h  Containment.h  Defines.h  EulerAngle.h  FrustumOps.h  Generate.h  Intersection.h  Math.h  MatrixOps.h  Output.h  PlaneOps.h  Point.h  Quat.h  Ray.h  SphereOps.h  Tri.h  TriOps.h  Vec.h  VecOps.h
include/gmtl/Numerics/: Eigen.h
include/gmtl/Util/: Assert.h  Meta.h
lang/python/src/: CMakeLists.txt  srcgen.py
lang/swig/: CMakeLists.txt  libnifalcon_swig.i
src/: CMakeLists.txt  nifalcon.c  nifalcon.h  nifalcon_ftd2xx.c  nifalcon_kinematics.c  nifalcon_kinematics.h  nifalcon_libftdi.c  nifalcon_test_fw.c  nifalcon_test_fw.h
src/c/: CMakeLists.txt  nifalcon.h  nifalcon_ftd2xx.c  nifalcon_kinematics.h  nifalcon_libftdi.c  nifalcon_test_fw.c  nifalcon_test_fw.h
src/comm/: CMakeLists.txt  FalconCommFTD2XX.cpp  FalconCommLibFTDI.cpp  FalconCommLibUSB.cpp
src/core/: FalconDevice.cpp  FalconFirmware.cpp
src/cpp/: CMakeLists.txt
src/cpp-optparse/: OptionParser.cpp
src/cpp/comm/: CMakeLists.txt  FalconCommFTD2XX.cpp  FalconCommFTD2XX.h  FalconCommLibFTDI.cpp  FalconCommLibFTDI.h  FalconCommLibUSB.cpp  FalconCommLibUSB.h  FalconFTD2XXComm.cpp  FalconFTD2XXComm.h  FalconLibFTDIComm.cpp  FalconLibFTDIComm.h
src/cpp/core/: CMakeLists.txt  FalconComm.h  FalconCommBase.h  FalconCore.h  FalconDevice.cpp  FalconDevice.h  FalconFirmware.cpp  FalconFirmware.h  FalconGeometry.h  FalconGrip.h  FalconKinematic.h
src/cpp/firmware/: CMakeLists.txt  FalconFirmwareNovintSDK.cpp  FalconFirmwareNovintSDK.h  FalconNovintFirmware.cpp  FalconNovintFirmware.h
src/cpp/grip/: FalconGripFourButton.h
src/cpp/kinematic/: FalconGeometry.h  FalconKinematicStamper.cpp  FalconKinematicStamper.h
src/cpp/kinematic/stamper/: AngularMatrix.h  (+14 more)
src/cpp/util/: CMakeLists.txt  FalconCLIBase.cpp  FalconCLIBase.h  FalconDeviceBoostThread.cpp  FalconDeviceBoostThread.h  FalconNovintHDALCompat.cpp  FalconNovintHDALCompat.h
src/firmware/: FalconFirmwareNovintSDK.cpp
src/kinematic/: CMakeLists.txt  FalconKinematicStamper.cpp  FalconKinematicZsomborMurray.cpp
src/kinematic/stamper/: AngularMatrix.cpp  DirectKinematic.cpp  InverseKinematic.cpp  JacobianMatrix.cpp  PositionMatrix.cpp
src/util/: CMakeLists.txt  FalconCLIBase.cpp  FalconDeviceBoostThread.cpp  FalconDeviceDefault.cpp  FalconDeviceThread.cpp
(+67 files in other folders)
