SET(LIBRARY_SRCS nifalcon_test_fw.c)
INSTALL(FILES nifalcon.h nifalcon_test_fw.h DESTINATION ${INCLUDE_INSTALL_DIR}/falcon/c/)

IF(LIBFTD2XX_FOUND)
  SET(C_COMM_SRCS nifalcon_ftd2xx.c ${LIBRARY_SRCS})
  INCLUDE_DIRECTORIES(${LIBFTD2XX_INCLUDE_DIRS})
  BUILD_LIB(nifalcon_c_ftd2xx "${BUILD_TYPES}" "${C_COMM_SRCS}" "${LIBFTD2XX_LIBRARIES}" "-DLIBFTD2XX")
ENDIF(LIBFTD2XX_FOUND)

IF(LIBFTDI_FOUND)
  SET(C_COMM_SRCS nifalcon_libftdi.c ${LIBRARY_SRCS})
  INCLUDE_DIRECTORIES(${LIBFTDI_INCLUDE_DIRS})
  BUILDSYS_BUILD_LIB(
	NAME nifalcon_c_libftdi 
	SOURCES "${C_COMM_SRCS}" 
	LINK_LIBS "${LIBFTDI_LIBRARIES}" 
	CXX_FLAGS "-DLIBFTDI"
	LINK_FLAGS FALSE)
ENDIF(LIBFTDI_FOUND)
